* add create-hadoop-live-by-pkg, create-hadoop-live     and hadoop-live-hook     - create-hadoop-live-by-pkg will call       create-hadoop-live then run hadoop-live-hook       to generate drbl-hadoop Live CD.   * modified Makefile     - make drbl-hadoop
git-svn-id: https://drbl-hadoop.svn.sf.net/svnroot/drbl-hadoop@7 e5d5d847-f3c7-48d0-a564-dace3b5cdd67

--- a/drbl-hadoop-live/Makefile
+++ b/drbl-hadoop-live/Makefile
@@ -4,4 +4,6 @@ all: clean
 clean:
 	sudo lh clean --purge
 	sudo rm -rf config
-	sudo rm build.log error.log
+
+drbl-hadoop: clean
+	sudo ./create-hadoop-live-by-pkg -m http://free.nchc.org.tw/debian -s http://free.nchc.org.tw/debian-security -e unstable > build.log 2> error.log
