* fix two typos and verified the output iso     includes cloudera's distribution for hadoop.
git-svn-id: https://drbl-hadoop.svn.sf.net/svnroot/drbl-hadoop@9 e5d5d847-f3c7-48d0-a564-dace3b5cdd67

--- a/drbl-hadoop-live/Makefile
+++ b/drbl-hadoop-live/Makefile
@@ -1,9 +1,9 @@
 all: clean
+	sudo ./create-hadoop-live-by-pkg -m http://free.nchc.org.tw/debian -s http://free.nchc.org.tw/debian-security -e unstable > build.log 2> error.log
+
+test: clean
 	sudo ./test-live-helper.sh > build.log 2> error.log
 
 clean:
 	sudo lh clean --purge
-	sudo rm -rf config
-
-drbl-hadoop: clean
-	sudo ./create-hadoop-live-by-pkg -m http://free.nchc.org.tw/debian -s http://free.nchc.org.tw/debian-security -e unstable > build.log 2> error.log
+	sudo rm -rf config auto
