* change from live-helper to live-build
git-svn-id: https://drbl-hadoop.svn.sf.net/svnroot/drbl-hadoop@12 e5d5d847-f3c7-48d0-a564-dace3b5cdd67

--- a/drbl-hadoop-live/Makefile
+++ b/drbl-hadoop-live/Makefile
@@ -5,5 +5,5 @@ test: clean
 	sudo ./test-live-helper.sh > build.log 2> error.log
 
 clean:
-	sudo lh clean --purge
+	sudo lb clean --purge
 	sudo rm -rf config auto
